Replace use of Double constructor with valueOf() factory method